conformance/tests/mesh-split.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mesh-split
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - kind: Service
    name: echo
    group: core
    port: 80
  rules:
  - matches:
    - path:
        type: Exact
        value: /v1
    backendRefs:
    - name: echo-v1
      port: 80
  - matches:
    - path:
        type: Exact
        value: /v2
    backendRefs:
    - name: echo-v2
      port: 80
